# gr_tech_task

./: .gitignore  README.md  pyproject.toml
booking/: .env.sample  Makefile  docker-compose.yml
booking/booking/: settings.py  urls.py
booking/flats/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
booking/flats/management/commands/: seed_bookings.py  seed_flats.py
booking/flats/migrations/: 0001_initial.py  0002_alter_booking_options_alter_booking_checkin.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/src/: bookings.js
