[project]
name = "gr-tech-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-cors-headers>=4.4.0",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "factory-boy>=3.3.1",
    "psycopg2>=2.9.9",
    "python-dotenv>=1.0.1",
]
